macros/tests/ui/command_handlers_must_be_inside_gprogram_1.stderr
error: The `command_handlers` block must be on the top level of `gprogram` module
 --> tests/ui/command_handlers_must_be_inside_gprogram_1.rs:7:5
  |
7 | /     fn set_value(value: u32) -> Result<(), ()> {
8 | |         Ok(())
9 | |     }
  | |_____^
