macros/tests/ui/command_handlers_must_be_inside_gprogram_1.rs
use gprogram_framework_macros::{command_handlers, gprogram};

#[gprogram]
mod gprogram {}

command_handlers!(
    fn set_value(value: u32) -> Result<(), ()> {
        Ok(())
    }
);

fn main() {}
